--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emptynode",
+  "name": "chosen-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,13 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^7.1.9",
+    "mongoose": "^4.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local-mongoose": "^4.0.0",
+    "winston": "^2.3.0"
   }
 }
